--- a/index.html
+++ b/index.html
@@ -20,30 +20,6 @@
       background: var(--bg-dark);
       overflow-x: hidden;
     }
-    header {
-      background: #2a0040;
-      color: white;
-      text-align: center;
-      padding: 2rem 1rem;
-      position: sticky;
-      top: 0;
-      z-index: 1000;
-    }
-    header h1 {
-      font-size: 3rem;
-    }
-    header .btns {
-      margin-top: 1rem;
-    }
-    header button {
-      background: var(--highlight);
-      border: none;
-      color: white;
-      margin: 0 0.5rem;
-      padding: 0.5rem 1rem;
-      border-radius: 5px;
-      cursor: pointer;
-    }
     .game-grid {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
@@ -56,7 +32,7 @@
       background: #000;
       border: 2px solid var(--highlight);
       border-radius: 10px;
-      height: 300px;
+      height: 200px;
       position: relative;
       overflow: hidden;
     }
@@ -89,7 +65,6 @@
       left: calc(100vw * var(--rand-x));
       transform: rotate(var(--rand-rot));
       animation: floatUp var(--duration) linear infinite;
-      pointer-events: auto;
     }
     @keyframes floatUp {
       from {
@@ -105,33 +80,16 @@
       font-size: 2rem;
       padding-top: 40%;
     }
-    .shield-meter {
-      position: absolute;
-      bottom: 10px;
-      left: 10px;
-      color: white;
-      font-size: 14px;
-    }
   </style>
 </head>
 <body>
-  <header>
-    <h1>Nolan's Games</h1>
-    <div class="btns">
-      <button onclick="alert('Settings not available yet')">Settings</button>
-      <button onclick="alert('More content coming soon')">More</button>
-    </div>
-  </header>
+  <h1 style="color: white; text-align: center; font-size: 3rem; padding: 2rem 1rem;">Nolan's Games</h1>
 
   <div class="game-grid" id="gameGrid">
     <div class="game-box" id="gravityBox">
       <button class="play-btn" onclick="startGravitySwitcher(this)">Play</button>
-      <canvas id="gravityCanvas"></canvas>
+      <canvas id="gravityCanvas" width="300" height="200"></canvas>
     </div>
-    <!-- The next game will be added below in the next step -->
-
-    <!-- Coming soon boxes -->
-    <div class="game-box"><div class="coming-soon">Coming Soon</div></div>
     <div class="game-box"><div class="coming-soon">Coming Soon</div></div>
     <div class="game-box"><div class="coming-soon">Coming Soon</div></div>
     <div class="game-box"><div class="coming-soon">Coming Soon</div></div>
@@ -140,7 +98,7 @@
   </div>
 
   <script>
-    // --- Floating Background Squares ---
+    // Floating Background Squares
     function spawnSquares(count = 10) {
       for (let i = 0; i < count; i++) {
         const square = document.createElement('div');
@@ -149,25 +107,28 @@
         square.style.setProperty('--rand-rot', `${Math.random() * 360}deg`);
         square.style.setProperty('--duration', `${5 + Math.random() * 10}s`);
 
-        let isDragging = false;
         let offset = { x: 0, y: 0 };
+        let isDragging = false;
 
         square.addEventListener('mousedown', (e) => {
           isDragging = true;
           offset.x = e.clientX - square.getBoundingClientRect().left;
           offset.y = e.clientY - square.getBoundingClientRect().top;
-          square.style.animationPlayState = 'paused';
+          square.style.animation = 'none';
         });
 
         document.addEventListener('mousemove', (e) => {
           if (!isDragging) return;
-          square.style.top = `${e.clientY - offset.y}px`;
+          square.style.position = 'fixed';
           square.style.left = `${e.clientX - offset.x}px`;
+          square.style.top = `${e.clientY - offset.y}px`;
         });
 
         document.addEventListener('mouseup', () => {
-          isDragging = false;
-          square.style.animationPlayState = 'running';
+          if (isDragging) {
+            square.style.animation = '';
+            isDragging = false;
+          }
         });
 
         document.body.appendChild(square);
@@ -175,13 +136,12 @@
     }
     spawnSquares();
 
-    // --- Gravity Switcher Game Logic ---
+    // Gravity Switcher Game Logic
     let gravityGame = {
       ctx: null,
-      player: { x: 80, y: 250, size: 20, gravity: 1 },
+      player: { x: 40, y: 140, size: 15, gravity: 1 },
       enemies: [],
       isRunning: false,
-      lastTime: 0,
       speed: 2,
       canvas: null
     };
@@ -195,7 +155,7 @@
       gravityGame.ctx = ctx;
       gravityGame.enemies = [];
       gravityGame.speed = 2;
-      gravityGame.player.y = 250;
+      gravityGame.player.y = 140;
       gravityGame.isRunning = true;
       requestAnimationFrame(updateGravity);
 
@@ -219,7 +179,7 @@
 
     function animateGravitySwitch(direction) {
       const start = gravityGame.player.y;
-      const end = direction === 1 ? 250 : 30;
+      const end = direction === 1 ? 140 : 30;
       let startTime = null;
 
       function animate(time) {
@@ -232,7 +192,7 @@
       requestAnimationFrame(animate);
     }
 
-    function updateGravity(timestamp) {
+    function updateGravity() {
       const { ctx, player, canvas, enemies } = gravityGame;
       ctx.clearRect(0, 0, canvas.width, canvas.height);
 
@@ -240,7 +200,7 @@
       ctx.fillRect(player.x, player.y, player.size, player.size);
 
       if (Math.random() < 0.03) {
-        enemies.push({ x: 400, y: Math.random() < 0.5 ? 30 : 250, size: 20 });
+        enemies.push({ x: 300, y: Math.random() < 0.5 ? 30 : 140, size: 15 });
       }
 
       ctx.fillStyle = '#f00';
