--- a/index.html
+++ b/index.html
@@ -20,14 +20,17 @@
       background: var(--bg-dark);
       overflow-x: hidden;
     }
-    h1 {
+    header {
+      background: #2a0040;
       color: white;
       text-align: center;
-      font-size: 3rem;
-      padding: 2rem 1rem;
+      padding: 3rem 1rem;
+    }
+    header h1 {
+      font-size: 5rem;
     }
     .spacer {
-      height: 200px;
+      height: 150px;
     }
     .game-grid {
       display: grid;
@@ -92,23 +95,23 @@
     }
     .timer {
       position: absolute;
-      top: 10px;
+      top: 5px;
       left: 10px;
       color: white;
-      font-size: 16px;
-      font-weight: bold;
-      z-index: 5;
+      font-size: 14px;
     }
   </style>
 </head>
 <body>
-  <h1>Nolan's Games</h1>
+  <header>
+    <h1>Nolan's Games</h1>
+  </header>
   <div class="spacer"></div>
   <div class="game-grid" id="gameGrid">
     <div class="game-box" id="gravityBox">
       <div class="timer" id="gameTimer">0.0s</div>
       <button class="play-btn" onclick="startGravitySwitcher(this)">Play</button>
-      <canvas id="gravityCanvas"></canvas>
+      <canvas id="gravityCanvas" width="400" height="300"></canvas>
     </div>
     <div class="game-box"><div class="coming-soon">Coming Soon</div></div>
     <div class="game-box"><div class="coming-soon">Coming Soon</div></div>
@@ -143,6 +146,9 @@
         });
 
         document.addEventListener('mouseup', () => {
+          if (isDragging) {
+            square.style.animation = `floatUp var(--duration) linear infinite`;
+          }
           isDragging = false;
         });
 
@@ -153,14 +159,13 @@
 
     let gravityGame = {
       ctx: null,
-      player: { x: 60, y: 220, size: 15, gravity: 1 },
+      player: { x: 80, y: 230, size: 20, gravity: 1 },
       enemies: [],
       isRunning: false,
       lastTime: 0,
       speed: 2,
       canvas: null,
-      timer: 0,
-      timerInterval: null
+      timerStart: null
     };
 
     function startGravitySwitcher(btn) {
@@ -172,15 +177,15 @@
       gravityGame.ctx = ctx;
       gravityGame.enemies = [];
       gravityGame.speed = 2;
-      gravityGame.player.y = 220;
+      gravityGame.player.y = 230;
       gravityGame.isRunning = true;
-      gravityGame.timer = 0;
-      document.getElementById('gameTimer').textContent = '0.0s';
+      gravityGame.timerStart = performance.now();
+      updateGravity(performance.now());
       gravityGame.timerInterval = setInterval(() => {
-        gravityGame.timer += 0.1;
-        document.getElementById('gameTimer').textContent = gravityGame.timer.toFixed(1) + 's';
-      }, 100);
-      requestAnimationFrame(updateGravity);
+        if (gravityGame.isRunning) {
+          gravityGame.speed += 0.05;
+        }
+      }, 3000);
     }
 
     document.addEventListener('keydown', (e) => {
@@ -196,9 +201,8 @@
 
     function animateGravitySwitch(direction) {
       const start = gravityGame.player.y;
-      const end = direction === 1 ? 220 : 30;
+      const end = direction === 1 ? 230 : 30;
       let startTime = null;
-
       function animate(time) {
         if (!startTime) startTime = time;
         const elapsed = time - startTime;
@@ -216,13 +220,13 @@
       ctx.fillStyle = '#0f0';
       ctx.fillRect(player.x, player.y, player.size, player.size);
 
-      if (Math.random() < 0.02) {
-        let lastY = enemies.length ? enemies[enemies.length - 1].y : null;
-        let newY = Math.random() < 0.5 ? 30 : 220;
-        if (lastY !== null && Math.abs(lastY - newY) < 100) {
-          newY = newY === 30 ? 220 : 30;
-        }
-        enemies.push({ x: 350, y: newY, size: 15 });
+      const lastEnemy = enemies[enemies.length - 1];
+      if (
+        Math.random() < 0.03 &&
+        (!lastEnemy || Math.abs(lastEnemy.y - (Math.random() < 0.5 ? 30 : 230)) > 60)
+      ) {
+        let y = Math.random() < 0.5 ? 30 : 230;
+        enemies.push({ x: 400, y: y, size: 20 });
       }
 
       ctx.fillStyle = '#f00';
@@ -242,14 +246,18 @@
         if (e.x + e.size < 0) enemies.splice(i, 1);
       }
 
-      if (gravityGame.isRunning) requestAnimationFrame(updateGravity);
+      if (gravityGame.isRunning) {
+        const elapsed = ((timestamp - gravityGame.timerStart) / 1000).toFixed(1);
+        document.getElementById('gameTimer').textContent = `${elapsed}s`;
+        requestAnimationFrame(updateGravity);
+      }
     }
 
     function endGravityGame() {
       gravityGame.isRunning = false;
+      clearInterval(gravityGame.timerInterval);
       document.querySelector('#gravityBox .play-btn').style.display = 'block';
       document.body.style.overflow = 'auto';
-      clearInterval(gravityGame.timerInterval);
     }
   </script>
 </body>
